k8s/telemetry/kubenurse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: kubenurse
  name: kubenurse
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: kubenurse
